--- a/data_collection_yamls/gated_variants.yaml
+++ b/data_collection_yamls/gated_variants.yaml
@@ -26,14 +26,13 @@ command: >-
   pip install --user -e ".[all]"
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
-  -f /mnt/config/parameters.yaml
+  -f /mnt/config/parameters.yaml --run_name $(WANDB_NAME)
 instance: r1z1-g8-a100  # Name of the instance you want to run on, e.g. r1z1-g8-a100
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
 algorithms:
   - act_fn_search
 models: bert-base_streaming  # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
 parameters:  # Any parameter overrides you want to use IN EVERY RUN should be specified here
-  run_name: bert-{{ search['algorithms.act_fn_search.act_fn_name'] }}-gated
   _n_gpus: 8
   grad_accum: 1
   algorithms:
@@ -46,7 +45,7 @@ parameters:  # Any parameter overrides you want to use IN EVERY RUN should be sp
 grid:
   algorithms.act_fn_search.act_fn_name:
     - squared_relu
-    - relu
-    - gelu
-    - swish
+    #- relu
+    #- gelu
+    #- swish
 named_like: bert-{{ search['algorithms.act_fn_search.act_fn_name'] }}-gated
