--- a/data_collection_yamls/oom_test.yaml
+++ b/data_collection_yamls/oom_test.yaml
@@ -3,7 +3,7 @@ name: bert-pareto-curves  # Name of the sweep - it'll be used in run names
 project: bert-pareto-curves  # Name of the Weights and Biases project to use
 image: mosaicml/pytorch_internal:moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git  # Name of the git repo to clone - can be full URL or path under github.com
-git_branch: moin/cleaned_gated  # Name of the git branch/tag/commit to use
+git_branch: moin/debugging_ooms  # Name of the git branch/tag/commit to use
 command: >-
   git clone https://github.com/moinnadeem/apex /root/apex
 
@@ -27,7 +27,7 @@ command: >-
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
-instance: r1z2-g8-a100  # Name of the instance you want to run on, e.g. r1z1-g8-a100
+instance: r1z1-g8-a100  # Name of the instance you want to run on, e.g. r1z1-g8-a100
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
 algorithms:
   - act_fn_search
