--- a/data_collection_yamls/baseline.yaml
+++ b/data_collection_yamls/baseline.yaml
@@ -1,15 +1,11 @@
 ---
 name: bert-pareto-curves  # Name of the sweep - it'll be used in run names
 project: bert-pareto-curves  # Name of the Weights and Biases project to use
-image: mosaicml/pytorch_internal:moin  # Name of the docker image to use
+image: mosaicml/moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git  # Name of the git repo to clone - can be full URL or path under github.com
 git_branch: moin/cleaned_gated  # Name of the git branch/tag/commit to use
 command: >-
-  git clone https://github.com/moinnadeem/apex /root/apex
-
-  cd /root/apex
-
-  pip install --user -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
+  source ~/env/bin/activate
 
   pip install wheel
 
@@ -23,7 +19,7 @@ command: >-
 
   git checkout {{ git_branch }}
 
-  pip install --user -e ".[all]"
+  pip install -e ".[all]"
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml --run_name $(WANDB_NAME)
@@ -43,4 +39,4 @@ parameters:  # Any parameter overrides you want to use IN EVERY RUN should be sp
       use_fln: false
       use_triton: false
       act_fn_name: no_replacement
-named_like: bert-baseline
+named_like: moin-bert-baseline
