--- a/pretraining_data_collection_yamls/fln_deepspeed.yaml
+++ b/pretraining_data_collection_yamls/fln_deepspeed.yaml
@@ -5,11 +5,7 @@ image: mosaicml/moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git  # Name of the git repo to clone - can be full URL or path under github.com
 git_branch: moin/cleaned_gated  # Name of the git branch/tag/commit to use
 command: >-
-  git clone https://github.com/moinnadeem/apex /root/apex
-
-  cd /root/apex
-
-  pip install --user -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
+  source ~/env/bin/activate
 
   pip install wheel
 
@@ -23,7 +19,7 @@ command: >-
 
   git checkout {{ git_branch }}
 
-  pip install --user -e ".[all]"
+  pip install -e ".[all]"
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml --run_name $(WANDB_NAME)
@@ -33,14 +29,18 @@ algorithms:
   - act_fn_search
 models: bert-base_streaming  # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
 parameters:  # Any parameter overrides you want to use IN EVERY RUN should be specified here
-  run_name: bert-baseline
+  run_name: bert-fln-deepspeed
   _n_gpus: 8
   grad_accum: 1
   algorithms:
     act_fn_search:
       use_gated: false
       use_rmsnorm: false
-      use_fln: false
+      use_fln: true
       use_triton: false
       act_fn_name: no_replacement
-named_like: moin-bert-baseline
+  precision: fp16
+  deepspeed:
+    zero_optimization:
+      stage: 1
+named_like: moin-bert-fln-deepspeed
