--- a/composer/yamls/models/rte.yaml
+++ b/composer/yamls/models/rte.yaml
@@ -60,7 +60,10 @@ validate_every_n_batches: 1000
 validate_every_n_epochs: 1
 callbacks:
   - lr_monitor: {}
-load_path: https://storage.googleapis.com/llm_checkpoints/bert_checkpoint/bert_checkpoints/ep7.pt
+load_path: https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep1-ba68796-rank0-wct38583/checkpoints/ep5-ba40910-rank0-wct5362 
 load_weights_only: true
 load_strict_model_weights: false
 load_chunk_size: 8192
+load_ignore_model_keys:
+  - module.classifier.weight
+  - module.classifier.bias
