--- a/pretraining_data_collection_yamls/baseline.yaml
+++ b/pretraining_data_collection_yamls/baseline.yaml
@@ -1,17 +1,8 @@
 ---
 run_name: "bert-baseline"
 inherits:
-  - command.yaml
-  - platform.yaml
-  - integrations.yaml
-  - model.yaml
-parameters:
-  algorithms:
-    act_fn_search:
-      use_gated: false
-      use_rmsnorm: false
-      use_fln: false
-      use_triton: false
-      act_fn_name: no_replacement
-      w0_bias: false
-      w1_bias: false
+  - common/command.yaml
+  - common/platform.yaml
+  - common/integrations.yaml
+  - common/model.yaml
+  - algorithms/act_fn_search.yaml
